# diploma_project_FED_FL_MED

./: .coverage  .coveragerc  .gitignore  AUDIT_LOGGING_SUCCESS.md  AUDIT_LOGGING_TEST.md  AUDIT_PAGE_TESTING.md  CHAT_SESSION_SUMMARY.md  DATASET_ACTIVATION_FIX.md  DATASET_UI_UPDATE.md  E2E_FIXES_SUMMARY.md  E2E_TESTING_GUIDE.md  ENHANCED_AUDIT_LOGGING_AND_TOKEN_MANAGEMENT_SUMMARY.md  FASTAPI_HTTPS_IMPLEMENTATION.md  FEDERATED_LOGGING_STATUS.md  FEDERATED_MODEL_REGISTRATION.md  FEDERATED_UI_IMPROVEMENTS.md  FEDERATED_UPDATE_SUMMARY.md  FLOWER_MIGRATION_SUMMARY.md  FLOWER_QUICK_REFERENCE.md  GPU_QUICK_START.md  HOW_TO_USE_OBSERVABILITY.md  HOW_TO_USE_UNIFIED_LOGS.md  IMPLEMENTATION_STATUS.md  INFERENCE_HISTORY_FEATURE.md  INFERENCE_LOGGING_ENHANCEMENT.md  JOBS_IMPLEMENTATION_SUMMARY.md  MANUAL_FL_WORKFLOW.md  MODELS_PAGE_IMPROVEMENTS.md  MODEL_LABELS_FEATURE.md  MTLS_IMPLEMENTATION.md  MTLS_IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_SECURITY_STEPS.md  NEXT_STEPS_PRIORITIZED.md  OBSERVABILITY_FEATURE.md  OBSERVABILITY_TEST_RESULTS.md  PAYLOAD_SIGNING_IMPLEMENTATION.md  PHASE1_COMPLETE_SUMMARY.md  POLLING_BASED_LOGS.md  PROJECT_OVERVIEW.md  (+56 more)
shared/python/node_core/: README.md  pyproject.toml
shared/python/node_core/examples/: fl_simulation.py  flower_quickstart.py  flower_simulation.py  inference_example.py  train_example.py
shared/python/node_core/node_core/: __init__.py  coverage.lcov  crypto_utils.py  data_utils.py  experiment_logger.py  fastapi_ssl.py  fl_aggregator.py  (+9 more)
shared/python/node_core/node_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+170 files in other folders)
