[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "node-core"
version = "0.1.0"
description = "Shared ML and FL utilities for federated medical imaging"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fed-Med-FL Team"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.62.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.setuptools]
packages = ["node_core"]

[tool.setuptools.package-dir]
node_core = "node_core"
